# django-video-transcoding

./: .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  example.env  manage.py  mypy.ini  pyproject.toml  requirements.txt  requires.txt  setup.py  test-requires.txt  tox.ini
.github/workflows/: build.yml  codecov.yml  codeql-analysis.yml  documentation.yml  mypy.yml  pythonpublish.yml
deploy/dvt/: Dockerfile  start-celery-worker.sh  start-django-dev.sh
deploy/storage/: Dockerfile  nginx.conf  start-nginx.sh
docs/: Makefile  requirements.txt
docs/source/: application.md  architecture.md  conf.py  development.md  index.rst  installation.md  modules.rst  operation.md  quickstart.md  video_transcoding.rst
dvt/: settings.py
src/: setup.py
src/dvt/: asgi.py  settings.py  urls.py  wsgi.py
src/video_transcoding/: admin.py  celery.py  defaults.py  forms.py  helpers.py  models.py  signals.py  strategy.py  tasks.py  transcoding.py  utils.py
src/video_transcoding/migrations/: 0001_initial.py  0002_auto_20200226_0919.py  0003_auto_20200524_1554.py  0003_auto_20200525_1130.py  0004_audioprofile_audiotrack_preset_audioprofiletracks_and_more.py  0005_video_metadata.py  0006_alter_audioprofile_options_and_more.py  0006_video_duration.py  0006_video_profile.py  0007_videoprofile_segment_duration.py
src/video_transcoding/tests/: base.py  test_analysis.py  test_celery.py  test_extract.py  test_ffprobe.py  test_metadata.py  test_models.py  test_strategy.py  test_tasks.py  test_transcoder.py  test_transcoding.py  (+2 more)
testproject/: asgi.py  settings.py
video_transcoding/: __init__.py  admin.py  apps.py  defaults.py  helpers.py  models.py  signals.py  tasks.py  transcoding.py  utils.py
video_transcoding/migrations/: 0001_initial.py
video_transcoding/tests/: test_models.py  test_tasks.py  test_transcoding.py
(+14 files in other folders)
